Fixed search bar and button alignments

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
   color: #6c648d;
   border: solid 1px #919ca5;
   border-radius: 4px;
-  max-width: 60%;
+  max-width: 55%;
 }
 
 ul {
@@ -14,14 +14,17 @@ li {
   list-style: none;
 }
 
-.container {
-}
-
 .search-bar {
   display: block;
   margin: 0 auto;
   margin-bottom: 30px;
-  width: 60%;
+  margin-top: 20px;
+  width: 80%;
+  padding: 2px;
+}
+
+.btn {
+  margin-top: 20px;
 }
 
 .degree-type {
